<resources>
    <string name="app_name">TaskManager</string>
    <string name="hint_edit_text">Enter your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password">Password length must be 8 characters</string>
    <string name="guest">Guest</string>
    <string name="test_icon">test icon</string>
    <string name="title_new_task">New Task</string>
    <string name="task_title">Task Title</string>
    <string name="hint_task_description">Task description</string>
    <string name="add">Add</string>
    <string name="error_field_empty">This filed cannot be Empty</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="edit">Edit</string>
    <string name="google_client_id" translatable="false">393132685355-gbk4d761dvgh1ugh246eofdqfvpv421r.apps.googleusercontent.com</string>
    <string name="error_google_login">google login failed</string>

</resources>
